# PC-Enabled-Signal-Generator

./: CMakeLists.txt  README.md  index.html  livevideo.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_app.cpp  mainwindow_app.h  params.json  ui_mainwindow.h  ui_mainwindow_app.h  voicerecognition.cpp  voicerecognition.h
tldinterface/: tldinterface.cpp  tldinterface.h  tldrecognition.cpp  tldrecognition.h
